--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -1,6 +1,6 @@
 .page-wrapper {
   display: flex;
-  .auth-left {
+  .image {
     display: flex;
     flex-grow: 1;
     justify-content: center;
@@ -13,7 +13,17 @@
   }
   .auth-right {
     width: 29.5rem;
-    padding: 0.5rem;
-    gap: 0.5rem;
+    margin: 0.5rem;
+    padding: 4rem 2rem;
+    display: flex;
+    flex-direction: column;
+    float: left;
+    justify-content: space-between;
+    align-items: center;
+
+    .auth-footer {
+      display: flex;
+      gap: 4px;
+    }
   }
 }
