--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 200px;
+  padding-top: 106px;
   color: var(--color-styles-text-primary);
   text-align: center;
   h1 {
@@ -20,4 +20,12 @@
     bottom: 0;
     width: 50vw;
   }
+}
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  padding-top: 1rem;
+  flex-grow: 1;
 }
