--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -26,6 +26,9 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  padding-top: 1rem;
+  padding-top: 0;
   flex-grow: 1;
+  .title {
+    margin: 1rem 0;
+  }
 }
