--- a/src/styles/Buttons.scss
+++ b/src/styles/Buttons.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   gap: .25rem;
+  min-height: 2.25rem;
 }
 
 .button.primary {
@@ -39,6 +40,7 @@
   &:hover {
     border-color: var(--Gray-60);
     background-color: var(--Gray-60);
+    color: var(--text-on-color);
     img {
       filter: invert(100%) grayscale(100%);
     }
@@ -46,6 +48,7 @@
   &:active {
     border-color: var(--Gray-70);
     background-color: var(--Gray-70);
+    color: var(--text-on-color);
     img {
       filter: invert(100%) grayscale(100%);
     }
