--- a/src/index.scss
+++ b/src/index.scss
@@ -119,3 +119,12 @@ p {
   background-color: var(--Gray-50);
   color: var(--text-on-color);
 }
+
+.home-title {
+  margin-bottom: 2rem;
+}
+
+.auth-title {
+  text-align: center;
+  margin-bottom: 4rem;
+}
