--- a/src/styles/Buttons.scss
+++ b/src/styles/Buttons.scss
@@ -6,11 +6,10 @@
   display: flex;
   justify-content: center;
   gap: .25rem;
-  min-height: 2.25rem;
+  line-height: 1.5rem;
 }
 
 .button.primary {
-  margin-top: 2rem;
   background: var(--Primary-50);
   color: var(--color-styles-text-primary);
   &:hover {
