--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   width: 533px;
+  gap: 1rem;
 }
 
 .modal-close {
@@ -51,6 +52,7 @@
   border-radius: 1rem; // Equivalent to rounded-2xl in Tailwind
   width: 100%; // Equivalent to w-full in Tailwind
   height: 12rem; // Equivalent to h-48 in Tailwind
+  background: var(--Background-1, #F6F6F4); 
 }
 
 .modal-image {
@@ -64,6 +66,13 @@
   top: 1rem; // Equivalent to top-5 in Tailwind
   right: 1rem; // Equivalent to right-5 in Tailwind
   position: absolute;
+  height: 2.5rem;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: end;
+  gap: 1rem;
 }
 
 .hidden {
