--- a/src/styles/auction-card.scss
+++ b/src/styles/auction-card.scss
@@ -5,6 +5,7 @@
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
   .auction-header {
     display: flex;
     flex-direction: column;
@@ -32,7 +33,7 @@
     img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: cover;
       border-radius: .75rem;
     }
   }
@@ -44,7 +45,6 @@
         flex-grow: 1;
         img {
           width: auto;
-          height: auto;
         }
       }
     }
