--- a/src/styles/bid-card.scss
+++ b/src/styles/bid-card.scss
@@ -16,6 +16,8 @@
       height: 2rem;
       max-width: 2rem;
       max-height: 2rem;
+      border-radius: 1rem;
+      object-fit: cover;
     }
   }
   .price {
