--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -44,3 +44,16 @@ nav {
     }
   }
 }
+
+
+.menu {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: absolute;
+  top: 6rem;
+  right: 2rem;
+  border-radius: 2rem;
+  background-color: #fff;
+}
