added forgot-password link

--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -30,3 +30,10 @@
     }
   }
 }
+
+.forgot-password {
+  text-align: end;
+  color: var(--Text-Tertiary, #74817F);
+  font-size: .75rem;
+  cursor: pointer;
+}
