--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,10 @@ a, button, input, textarea {
   max-height: 56px;
 }
 
+a {
+  cursor: pointer;
+}
+
 textarea {
   width: 100%;
   height: 9.5rem;
