--- a/src/styles/auction-card.scss
+++ b/src/styles/auction-card.scss
@@ -1,6 +1,7 @@
 .auction-card {
   min-width: 216px;
   width: 100%;
+  height: 288px;
   background-color: #fff;
   border-radius: 1rem;
   display: flex;
@@ -30,11 +31,27 @@
   .auction-body {
     padding: 0.25rem;
     height: 158px;
-    img {
+    flex: 1 0 0;
+    .auction-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       border-radius: .75rem;
+    }
+  }
+}
+
+.is-editable {
+  height: 288px;
+  .auction-body {
+    display: flex;
+    padding: 4px;
+    flex-direction: column;
+    gap: 8px;
+    flex: 1 0 0;
+    align-self: stretch;
+    .auction-img {
+      height: 137px;
     }
   }
   .auction-edit {
@@ -49,8 +66,4 @@
       }
     }
   }
-}
-
-.is-editable {
-  height: 298px;
 }
