--- a/src/index.scss
+++ b/src/index.scss
@@ -83,6 +83,9 @@ input[type=number] {
   height: 4rem; 
   width: 4rem;
   margin-right: 2rem;
+  @media only screen and (max-width: 450px) {
+    margin-right: .5rem;
+  }
 }
 
 h1 {
