--- a/src/styles/auctions.scss
+++ b/src/styles/auctions.scss
@@ -2,4 +2,8 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 1rem;
+  @media only screen and (max-width: 450px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
