--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,6 +5,9 @@
   padding-top: 106px;
   color: var(--color-styles-text-primary);
   text-align: center;
+  @media only screen and (max-width: 450px) {
+    padding-top: 60px;
+  }
   h1 {
     font-size: 4rem;
     font-weight: 700;
@@ -15,10 +18,21 @@
     font-weight: 300;
   }
 
-  img {
+  picture {
     position: absolute;
     bottom: 0;
-    width: 50vw;
+    margin: auto 0;
+    img {
+      width: 50vw;
+      @media only screen and (max-width: 450px) {
+        width: 80vw;
+        height: 40vh;
+      }
+      @media only screen and (max-width: 850px) {
+        width: 80vw;
+        height: 40vh;
+      }
+    }
   }
 }
 
